# OrcaI

./: .coverage  .gitignore  CLAUDE.md  CODE-NOTES.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  check_request.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-06-09-orca-verify.md  2026-06-17-orca-cli-v2.md
docs/superpowers/specs/: 2026-06-09-orca-verify-design.md  2026-06-17-orca-cli-v2-design.md
eval/: dataset.jsonl  run.py
examples/: _stub_judge.py  aml_investigation.py  audit_trail.py  custom_check.py  quality_checks.py  rag_grounding.py  with_llm.py
src/orcaverify/: __init__.py  cli.py  context.py  core.py  policy.py  registry.py  trace.py
src/orcaverify/checks/: __init__.py  _text.py  base.py  faithful.py  grounded.py  nopii.py  predicate.py  rubric.py  schema.py
src/orcaverify/judges/: __init__.py  anthropic.py  base.py  local.py  openai.py
src/orcaverify/provenance/: __init__.py  chain.py  ledger.py  record.py  store.py
tests/: test_cli.py  test_decorator.py  test_eval.py  test_policy.py  test_public_api.py  test_registry.py  test_repair.py  test_trace.py  test_verifier.py
tests/checks/: test_base.py  test_concurrency.py  test_faithful.py  test_grounded.py  test_nopii.py  test_predicate.py  test_rubric.py  test_schema.py  test_text.py
tests/judges/: conftest.py  test_adapters.py  test_base.py  test_scoring.py
tests/provenance/: test_chain.py  test_ledger.py  test_store.py
