[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orca-verify"
version = "0.1.0"
description = "Your agent proposes. Orca verifies. You decide. A drop-in verification layer for LLM/agent outputs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Carlos" }]
keywords = ["llm", "agents", "verification", "guardrails", "grounding", "ai", "rag"]
dependencies = ["pydantic>=2"]

[project.urls]
Homepage = "https://github.com/your-handle/OrcaI"
Source = "https://github.com/your-handle/OrcaI"

[project.optional-dependencies]
anthropic = ["anthropic>=0.39"]
openai = ["openai>=1.40"]
local = ["httpx>=0.27"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
